gap issue

--- a/projects/dodata/dodata.css
+++ b/projects/dodata/dodata.css
@@ -1,6 +1,7 @@
 
 body {
-    /* height: 100%; */
+    width: 100%;
+    overflow-x: hidden;
 }
 /**** Pre-Loader *****/
 .no-js #loader { display: none;  }
